# back-end/src/bookings/dto/create-booking.dto.ts
@@ -1,5 +1,5 @@
 import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
-import { IsIn, IsNotEmpty, IsNumber, IsOptional, IsString, Min } from 'class-validator';
+import { IsIn, IsNotEmpty, IsNumber, IsOptional, IsString, Min, IsBoolean } from 'class-validator';
 
 export class CreateBookingDto {
   @ApiProperty({ example: '2026-08-01' }) @IsNotEmpty() @IsString() bookingDate: string;
@@ -12,4 +12,11 @@ export class CreateBookingDto {
   @ApiProperty({ example: 52000 }) @IsNotEmpty() @IsNumber() @Min(0) amount: number;
   @ApiPropertyOptional({ example: 'Pending', enum: ['Pending', 'Confirmed', 'Cancelled'] })
   @IsOptional() @IsString() @IsIn(['Pending', 'Confirmed', 'Cancelled']) status?: string;
+
+  @ApiPropertyOptional({ example: true }) @IsOptional() @IsBoolean() insuranceSelected?: boolean;
+  @ApiPropertyOptional({ example: 'Flight' }) @IsOptional() @IsString() transportMode?: string;
+  @ApiPropertyOptional({ example: true }) @IsOptional() @IsBoolean() cancellationProtectionSelected?: boolean;
+  @ApiPropertyOptional({ example: 100 }) @IsOptional() @IsNumber() cancellationFee?: number;
+  @ApiPropertyOptional({ example: 7 }) @IsOptional() @IsNumber() insuranceRate?: number;
+  @ApiPropertyOptional({ example: 150 }) @IsOptional() @IsNumber() insuranceAmount?: number;
 }
